v3.6.2 (XXXX-XX-XX)
-------------------

* Fixed `console.log(...)` not logging when called inside arangosh.

  Curiously, `require("console").log(...)` still worked from arangosh. This 
  bugfix makes both versions work again.

* Fixed internal issue #596: Added ability to disable DNF conversion in SEARCH
  condition for ArangoSearch views. As this conversion might result in
  overcomplicated disjunction and heavily slowdown execution.

* Fixed a bug where a single host agency could log too early.

* Cluster collection creation preconditioned on involved db server not in
  process of being cleaned and beyond.

* Supervision maintenance mode from "on" and TTL to expiry string.

* Clean out server job checks preconditions plan version unchanged for start.

* Make sure heartbeats are actually sent out and received once per second.

* Make active failover integration tests more stable.

* Include collections "_queues" and "_jobs" in dumps created by arangodump
  in case the option `--include-system-collections` was set to true. Previously
  these collections were always excluded from dumps.

* Fix bug in collection creation with distributeShardsLike.


v3.6.1 (2020-01-29)
-------------------

* Fixed issue #10949: k shortest paths behaviour wrong with zero weights.

* Updated ArangoDB Starter to 0.14.13.

* Added HotBackup events into auditing.

* Internal statistics API now uses integer timestamps instead of doubles. The
  old behavior sometimes leads to failed requests because of parse errors
  which occurred in the internally used JavaScript joi library.

* Fixed issue #10896: Variables defined inside spliced subqueries would leak
  into following COLLECT ... INTO var operations.

* Fixed COLLECT not invalidating variables for following COLLECT ... INTO var
  operations.

* Removed an unnecessary and wrong request from within the Web UI to the
  `/_admin/cluster/health` API. This lead to unauthorized network calls.
