@@ -29,12 +29,13 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 let jsunity = require("jsunity");
+let db = require("internal").db;
+
+const ruleName = "move-filters-into-enumerate";
+const lateRuleName = "late-document-materialization";
+const cn = "UnitTestsCollection";
 
 function optimizerRuleTestSuite () {
-  const ruleName = "move-filters-into-enumerate";
-  const cn = "UnitTestsCollection";
-  let db = require("internal").db;
-
   return {
 
     setUpAll : function () {
@@ -108,11 +109,12 @@ function optimizerRuleTestSuite () {
       queries.forEach(function(query) {
         let result = AQL_EXPLAIN(query[0], null, { optimizer: { rules: ["-" + ruleName] } });
         assertEqual(-1, result.plan.rules.indexOf(ruleName), query);
-        result = AQL_EXECUTE(query[0]).json.length;
+        result = AQL_EXECUTE(query[0], null, { optimizer: { rules: ["-" + ruleName] } }).json.length;
         assertEqual(query[1], result, query);
         
-        result = AQL_EXPLAIN(query[0], null, { optimizer: { rules: ["+" + ruleName] } });
+        result = AQL_EXPLAIN(query[0]);
         assertNotEqual(-1, result.plan.rules.indexOf(ruleName), query);
+        assertEqual(-1, result.plan.rules.indexOf(lateRuleName), query);
         assertEqual(0, result.plan.nodes.filter(function(n) { return n.type === 'FilterNode'; }).length);
         result = AQL_EXECUTE(query[0]).json.length;
         assertEqual(query[1], result, query);
@@ -128,6 +130,7 @@ function optimizerRuleTestSuite () {
       queries.forEach(function(query) {
         let result = AQL_EXPLAIN(query[0]);
         assertNotEqual(-1, result.plan.rules.indexOf(ruleName), query);
+        assertEqual(-1, result.plan.rules.indexOf(lateRuleName), query);
         assertEqual(0, result.plan.nodes.filter(function(n) { return n.type === 'FilterNode'; }).length);
         result = AQL_EXECUTE(query[0]).json.length;
         assertEqual(query[1], result, query);
@@ -174,6 +177,84 @@ function optimizerRuleTestSuite () {
       queries.forEach(function(query) {
         let result = AQL_EXPLAIN(query[0]);
         assertNotEqual(-1, result.plan.rules.indexOf(ruleName), query);
+        assertEqual(-1, result.plan.rules.indexOf(lateRuleName), query);
+        assertEqual(0, result.plan.nodes.filter(function(n) { return n.type === 'FilterNode'; }).length);
+        result = AQL_EXECUTE(query[0]).json.length;
+        assertEqual(query[1], result, query);
+      });
+    },
+    
+  };
+}
+
+function optimizerRuleIndexesTestSuite () {
+  return {
+
+    setUpAll : function () {
+      db._drop(cn);
+      let c = db._create(cn, { numberOfShards: 2 });
+      for (let i = 0; i < 2000; ++i) {
+        c.insert({ _key: "test" + i, value1: i, value2: i, value3: i });
+      }
+      c.ensureIndex({ type: "skiplist", fields: ["value1", "value2"] });
+    },
+    
+    tearDownAll : function () {
+      db._drop(cn);
+    },
+    
+    testIndexesDoesNotApplyBecauseOfIndexes : function () {
+      let queries = [ 
+        [ `FOR doc IN ${cn} FILTER doc.value1 == 1000 && doc.value2 == 1000 RETURN doc`, 1 ],
+        [ `FOR doc IN ${cn} FILTER doc.value1 == 1000 && doc.value2 == 2000 RETURN doc`, 0 ],
+        [ `FOR doc IN ${cn} FILTER doc.value1 == 1000 && doc.value2 >= 1000 RETURN doc`, 1 ],
+      ];
+
+      queries.forEach(function(query) {
+        let result = AQL_EXPLAIN(query[0]);
+        assertEqual(-1, result.plan.rules.indexOf(ruleName), query);
+        assertNotEqual(-1, result.plan.rules.indexOf("use-indexes"), query);
+        result = AQL_EXECUTE(query[0]).json.length;
+        assertEqual(query[1], result, query);
+      });
+    },
+    
+    testIndexesLimitWithLateMaterialization : function () {
+      let queries = [ 
+        [ `FOR doc IN ${cn} FILTER doc.value1 == 1000 SORT doc.value2 LIMIT 0, 10 RETURN doc`, 1 ],
+        [ `FOR doc IN ${cn} FILTER doc.value1 IN [ 1000, 1001, 1002 ] SORT doc.value2 LIMIT 0, 10 RETURN doc`, 3 ],
+      ];
+
+      queries.forEach(function(query) {
+        let result = AQL_EXPLAIN(query[0], null, { optimizer: { rules: ["-use-index-for-sort"] } });
+        assertEqual(-1, result.plan.rules.indexOf(ruleName), query);
+        if (db._engine().name === 'rocksdb') {
+          assertNotEqual(-1, result.plan.rules.indexOf(lateRuleName), query);
+        }
+        assertEqual(0, result.plan.nodes.filter(function(n) { return n.type === 'FilterNode'; }).length);
+        result = AQL_EXECUTE(query[0], null, { optimizer: { rules: ["-use-index-for-sort"] } }).json.length;
+        assertEqual(query[1], result, query);
+      });
+    },
+    
+    testIndexesLimitWithoutLateMaterialization : function () {
+      let queries = [ 
+        [ `FOR doc IN ${cn} FILTER doc.value1 == 1000 && doc.value3 >= 1000 SORT doc.value2 LIMIT 0, 10 RETURN doc`, 1 ],
+        [ `FOR doc IN ${cn} FILTER doc.value1 == 1000 && doc.value3 >= 1500 SORT doc.value2 LIMIT 0, 10 RETURN doc`, 0 ],
+        [ `FOR doc IN ${cn} FILTER doc.value1 IN [ 1000, 1001, 1002 ] && doc.value3 >= 1000 SORT doc.value2 LIMIT 0, 10 RETURN doc`, 3 ],
+        [ `FOR doc IN ${cn} FILTER doc.value1 IN [ 1000, 1001, 1002 ] && doc.value3 >= 1500 SORT doc.value2 LIMIT 0, 10 RETURN doc`, 0 ],
+      ];
+
+      queries.forEach(function(query) {
+        let result = AQL_EXPLAIN(query[0], null, { optimizer: { rules: ["-" + ruleName] } });
+        assertEqual(-1, result.plan.rules.indexOf(ruleName), query);
+        assertEqual(-1, result.plan.rules.indexOf(lateRuleName), query);
+        result = AQL_EXECUTE(query[0], null, { optimizer: { rules: ["-" + ruleName] } }).json.length;
+        assertEqual(query[1], result, query);
+        
+        result = AQL_EXPLAIN(query[0]);
+        assertNotEqual(-1, result.plan.rules.indexOf(ruleName), query);
+        assertEqual(-1, result.plan.rules.indexOf(lateRuleName), query);
         assertEqual(0, result.plan.nodes.filter(function(n) { return n.type === 'FilterNode'; }).length);
         result = AQL_EXECUTE(query[0]).json.length;
         assertEqual(query[1], result, query);
@@ -184,5 +265,6 @@ function optimizerRuleTestSuite () {
 }
 
 jsunity.run(optimizerRuleTestSuite);
+jsunity.run(optimizerRuleIndexesTestSuite);
 
 return jsunity.done();
