@@ -1,6 +1,14 @@
 v3.6.2 (XXXX-XX-XX)
 -------------------
 
+* Fixed issue #11051: AQL query wrongfully returning no results on 3.6.1.
+
+  This change prevents the "late-document-materialization" optimizer rule from
+  kicking in in cases when an index scan also uses early pruning of index
+  entries. In this case, the late document materialization will lead to the
+  filter condition used in early pruning not being applied correctly, potentially
+  producing wrong results.
+
 * Fixed `console.log(...)` not logging when called inside arangosh.
 
   Curiously, `require("console").log(...)` still worked from arangosh. This 
